feat: add create client endpoint, NipAlreadyExistsException
